--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Triwizard</string>
+    <string name="houses">Houses</string>
+    <string name="students">Students</string>
+    <string name="spells">Spells</string>
+    <string name="information">Information</string>
+    <string name="gryffindor">Gryffindor</string>
 </resources>
